--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/none06/DungeonsHeroes#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "peerjs": "^1.1.0",
     "socket.io": "^2.3.0"
   }
 }
