--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "peerjs": "^1.1.0",
+    "router": "^1.3.3",
     "socket.io": "^2.3.0"
   }
 }
