--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/none06/DungeonsHeroes#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mysql": "^2.17.1",
     "peerjs": "^1.1.0",
     "router": "^1.3.3",
     "socket.io": "^2.3.0"
