--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "font-awesome": "^4.7.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-awesome-slider": "^2.3.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-notifications-component": "^2.2.4",
