--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "react-awesome-slider": "^2.3.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-loader-spinner": "^3.1.5",
     "react-notifications-component": "^2.2.4",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
