--- a/front/package.json
+++ b/front/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.3.0",
     "reactstrap": "^8.2.0",
     "redux": "^4.0.4",
+    "rodal": "^1.7.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0"
   },
