--- a/front/package.json
+++ b/front/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
     "node-sass": "^4.13.0",
+    "npm": "^6.13.4",
     "react": "^16.12.0",
     "react-awesome-slider": "^2.3.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.12.0",
     "react-loader-spinner": "^3.1.5",
     "react-notifications-component": "^2.2.4",
