--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.12.0",
     "react-loader-spinner": "^3.1.5",
     "react-notifications-component": "^2.2.4",
+    "react-perfect-scrollbar": "^1.5.3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
